--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
   box-sizing: border-box;
 }
 
-header > #title {
+header>#title {
   padding: 2rem 0;
   text-align: center;
 }
@@ -34,28 +34,78 @@ header > #title {
   border: var(--border-dark-2px);
 }
 
-.flex > .box {
+.flex>.box {
   display: inline-flex;
   justify-content: center;
   align-items: center;
   font-weight: bold;
-  color: #fff;
-  font-size: clamp(2rem, 5vw, 3rem);
+  color: #ff0000;
+  font-size: clamp(10rem, 15vw, 15rem);
   cursor: var(--pointer-cursor);
   height: 220px;
   flex: 0 1 31%;
   margin: 1%;
 }
 
+.flex>.box.incorrect {
+  animation: shake 0.5s;
+  animation-iteration-count: 2s;
+}
+
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
+}
+
 #controls {
   color: #fff;
-  background-color: blue;
-  /* padding: 0.2rem 0; */
+  background-color: #0000ff;
   border-top: var(--border-dark-2px);
   border-bottom: var(--border-dark-2px);
 }
 
-#controls.flex > div {
+#controls.flex>div {
   flex: 0 1 50%;
   text-align: center;
 }
@@ -65,22 +115,22 @@ header > #title {
   justify-content: center;
 }
 
-#controls .modes > ul {
+#controls .modes>ul {
   padding: 0;
   margin: 0;
   text-align: left;
   display: inline-flex;
 }
 
-#controls .modes > ul > li {
+#controls .modes>ul>li {
   list-style: none;
   padding: 0.1rem 1rem;
 }
 
-#controls .modes > ul > li.active {
+#controls .modes>ul>li.active {
   background-color: #f0974e;
 }
 
-.modes > ul > li {
+.modes>ul>li {
   cursor: var(--pointer-cursor);
 }
